build.log
    Checking toposynth v0.1.0 (E:\Projects\toposynth)
error[E0425]: cannot find function `db_to_amplitude` in module `util`
  --> src\lib.rs:27:23
   |
27 |                 util::db_to_amplitude(0.0),
   |                       ^^^^^^^^^^^^^^^ not found in `util`

error[E0425]: cannot find function `db_to_amplitude` in module `util`
  --> src\lib.rs:29:32
   |
29 |                     min: util::db_to_amplitude(-30.0),
   |                                ^^^^^^^^^^^^^^^ not found in `util`

error[E0425]: cannot find function `db_to_amplitude` in module `util`
  --> src\lib.rs:30:32
   |
30 |                     max: util::db_to_amplitude(30.0),
   |                                ^^^^^^^^^^^^^^^ not found in `util`

error[E0277]: the trait bound `Toposynth: ClapPlugin` is not satisfied
  --> src\lib.rs:90:18
   |
90 | nih_export_clap!(Toposynth);
   |                  ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `ClapPlugin` is not implemented for `Toposynth`
  --> src\lib.rs:4:1
   |
 4 | pub struct Toposynth {
   | ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PluginDescriptor::for_plugin`
  --> C:\Users\kouno\.cargo\git\checkouts\nih-plug-d4210f82e920295f\28b149e\src\wrapper\clap\descriptor.rs:38:26
   |
38 |     pub fn for_plugin<P: ClapPlugin>() -> Self {
   |                          ^^^^^^^^^^ required by this bound in `PluginDescriptor::for_plugin`

error[E0277]: the trait bound `Toposynth: ClapPlugin` is not satisfied
   --> src\lib.rs:90:1
    |
 90 | nih_export_clap!(Toposynth);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `ClapPlugin` is not implemented for `Toposynth`
   --> src\lib.rs:4:1
    |
  4 | pub struct Toposynth {
    | ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `nih_plug::wrapper::clap::Wrapper`
   --> C:\Users\kouno\.cargo\git\checkouts\nih-plug-d4210f82e920295f\28b149e\src\wrapper\clap\wrapper.rs:103:23
    |
103 | pub struct Wrapper<P: ClapPlugin> {
    |                       ^^^^^^^^^^ required by this bound in `Wrapper`
    = note: this error originates in the macro `nih_export_clap` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the function or associated item `new` exists for struct `nih_plug::wrapper::clap::Wrapper<Toposynth>`, but its trait bounds were not satisfied
  --> src\lib.rs:90:1
   |
 4 | pub struct Toposynth {
   | -------------------- doesn't satisfy `Toposynth: ClapPlugin`
...
90 | nih_export_clap!(Toposynth);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ function or associated item cannot be called on `nih_plug::wrapper::clap::Wrapper<Toposynth>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `Toposynth: ClapPlugin`
note: the trait `ClapPlugin` must be implemented
  --> C:\Users\kouno\.cargo\git\checkouts\nih-plug-d4210f82e920295f\28b149e\src\plugin\clap.rs:6:1
   |
 6 | pub trait ClapPlugin: Plugin {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `nih_export_clap` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Toposynth: Vst3Plugin` is not satisfied
  --> src\lib.rs:91:18
   |
91 | nih_export_vst3!(Toposynth);
   |                  ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Vst3Plugin` is not implemented for `Toposynth`
  --> src\lib.rs:4:1
   |
 4 | pub struct Toposynth {
   | ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PluginInfo::for_plugin`
  --> C:\Users\kouno\.cargo\git\checkouts\nih-plug-d4210f82e920295f\28b149e\src\wrapper\vst3\factory.rs:37:26
   |
37 |     pub fn for_plugin<P: Vst3Plugin>() -> PluginInfo {
   |                          ^^^^^^^^^^ required by this bound in `PluginInfo::for_plugin`

error[E0277]: the trait bound `Toposynth: Vst3Plugin` is not satisfied
  --> src\lib.rs:91:1
   |
91 | nih_export_vst3!(Toposynth);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Vst3Plugin` is not implemented for `Toposynth`
  --> src\lib.rs:4:1
   |
 4 | pub struct Toposynth {
   | ^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `nih_plug::wrapper::vst3::Wrapper`
  --> C:\Users\kouno\.cargo\git\checkouts\nih-plug-d4210f82e920295f\28b149e\src\wrapper\vst3\wrapper.rs:50:23
   |
50 | pub struct Wrapper<P: Vst3Plugin> {
   |                       ^^^^^^^^^^ required by this bound in `Wrapper`
   = note: this error originates in the macro `nih_export_vst3` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the function or associated item `new` exists for struct `nih_plug::wrapper::vst3::Wrapper<Toposynth>`, but its trait bounds were not satisfied
  --> src\lib.rs:91:1
   |
 4 | pub struct Toposynth {
   | -------------------- doesn't satisfy `Toposynth: Vst3Plugin`
...
91 | nih_export_vst3!(Toposynth);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ function or associated item cannot be called on `nih_plug::wrapper::vst3::Wrapper<Toposynth>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `Toposynth: Vst3Plugin`
note: the trait `Vst3Plugin` must be implemented
  --> C:\Users\kouno\.cargo\git\checkouts\nih-plug-d4210f82e920295f\28b149e\src\plugin\vst3.rs:5:1
   |
 5 | pub trait Vst3Plugin: Plugin {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `nih_export_vst3` (in Nightly builds, run with -Z macro-backtrace for more info)

Some errors have detailed explanations: E0277, E0425, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `toposynth` (lib) due to 9 previous errors
